# symp

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
src/: builtin.c  cli.c  fileio.c  fileio.h  macho.c  main.c  private.h
src/sym/: exports.c  macho.c  objcmeta.c  private.h  resolve.c  resolve.h  symbol.c
